# itemWatcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
deploy/: .env.example  itemwatcher-scheduler.service  itemwatcher.service  setup.sh
src/: __init__.py  cli.py  config.py  scheduler.py  watcher.py
src/alerts/: __init__.py  notifier.py
src/scrapers/: __init__.py  amazon.py  base.py  flipkart.py
src/storage/: __init__.py  database.py
src/web/: app.py
src/web/templates/: base.html  index.html  product_detail.html
